k8s/redis-deployment.yaml

#
# Refer to webapp-deployment.yml for explanation of some of the important keys
#

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-pod
  template:
    metadata:
      labels:
        component: redis-pod
    spec:      
      containers:
        - name: redis-container
          image: redis
          ports:
            - containerPort: 6379
