k8s/webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: webapp 
  template:
    metadata:
      labels:
        component: webapp
    spec:      
      containers:
        - name: webapp
          image: vaibhavdesai137/multi-containers-workflow-webapp:latest
          ports:
            - containerPort: 3000
