k8s/workerapp-deployment.yml

#
# Refer to webapp-deployment.yml for explanation of some of the important keys
#

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: workerapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: workerapp-pod
  template:
    metadata:
      labels:
        component: workerapp-pod
    spec:      
      containers:
        - name: workerapp-container
          image: vaibhavdesai137/multi-containers-workflow-workerapp
