k8s/postgres-clusterip-service.yml

#
# Refer to webapp-clusterip-service.yml for explanation of some of the important keys
#

apiVersion: v1
kind: Service
metadata: 
  name: postgres-clusterip-service
spec:
  type: ClusterIP
  selector: 
    component: postgres-pod
  ports:
    - port: 5432
      targetPort: 5432
