k8s/redis-clusterip-service.yml

#
# Refer to webapp-clusterip-service.yml for explanation of some of the important keys
#

apiVersion: v1
kind: Service
metadata: 
  name: redis-clusterip-service
spec:
  type: ClusterIP
  selector: 
    component: redis-pod
  ports:
    - port: 6379
      targetPort: 6379
